sumo/tests/duarouter/alternatives/style1_input/errors/routealt/routealt_id_empty/errors.duarouter
Error: Attribute 'id' in definition of a routeDistribution is empty.
Quitting (on error).
